# fsi-gecx-bundle

./: .gcloudignore  .gitignore  ARCHITECTURE.md  GEMINI.md  Makefile  README.md  compose.shadowdb.yaml
adk-agent/back-office-agent/: README.md  cloudbuild-deploy.yaml  pyproject.toml
adk-agent/back-office-agent/agent/: agent.py  utils.py
adk-agent/back-office-agent/tests/: test_agent.py
adk-agent/credit-support-agent/: Dockerfile  Dockerfile.dockerignore  OPERATIONS.md  cloudbuild-deploy.yaml  pyproject.toml  requirements.txt  voice_agent.py
adk-agent/credit-support-agent/agent/: __init__.py  agent.py  avatar_runtime.py  closeout.py  events.py  fraud_voice.py  guidance_snapshot.py  instructions.py  live_runtime.py  log_safety.py  media_bridge.py  patch_adk.py  readiness.py  reset_guard.py  runtime_config.py  session_capacity.py  session_coordinator.py  (+8 more)
banking-service/: .dockerignore  .gitignore  Dockerfile  cloudbuild-db-migrate.yaml  cloudbuild-knowledge-catalog-sync.yaml  cloudbuild-public.yaml  cloudbuild-publish-deploy.yaml  main.py  pyproject.toml  pytest.ini  run.sh  test_metrics.py
banking-service/alembic/: env.py
banking-service/models/: action_proposal.py  application.py  artifact.py  audit.py  authentication.py  chat.py  credit_card.py  fdx.py  fraud.py  identity.py  kyc.py  merchant.py  notification.py  origination.py  profile.py  reference.py  search.py  secure_messaging.py  security.py  settings.py  support.py  synthetic_schedule.py  underwriting.py  voice_session.py
banking-service/repositories/: accounts.py  cdc_lakehouse.py  credit_card.py  fraud.py  identity.py  origination.py  settings.py  support.py  synthetic_schedule.py
banking-service/resources/: merchant_catalog.json  vip_googlers.json
banking-service/routers/: accounts.py  application.py  artifact.py  card_network.py  ccai_authentication.py  credit_card.py  cxas_authentication.py  fdx.py  health.py  internal.py  locator.py  mcp.py  merchants.py  notification.py  profile.py  search.py  secure_messaging.py  settings.py  simulation.py  support.py  synthetic_schedule.py  underwriting.py  voice_bidi.py
banking-service/scripts/: audit_outbox_relay.py  bootstrap_iceberg_catalog.py  database_lifecycle.py  expire_stale_fraud_alerts.py  sync_fraud_support_guidance.py
banking-service/services/: __init__.py  accounts.py  action_proposal_context.py  action_proposals.py  card_network.py  cdc_monitoring.py  ces_session_bootstrap.py  ces_session_capability.py  credit_card.py  document_ai.py  financial_journal.py  fraud_alerts.py  fraud_scoring.py  knowledge_catalog.py  ledger.py  locator.py  merchant_intelligence_service.py  merchant_service.py  messaging.py  origination.py  profile.py  search.py  seeding_service.py  settings.py  simulation.py  support.py  synthetic_schedule.py  taxonomy_service.py  underwriting.py  underwriting_callback.py  voice_bidi.py  voice_session_epochs.py
banking-service/tests/: conftest.py  test_accounts_router.py  test_action_proposal_context.py  test_action_proposals.py  test_alembic_env_rbac.py  test_audit_dlq.py  test_audit_outbox_and_repositories.py  test_audit_outbox_relay.py  test_auth_direct.py  test_bootstrap_iceberg_catalog.py  test_bq_v2_schema.py  test_card_network_and_billpay.py  test_cdc_monitoring_service.py  test_ces_callback_bundle.py  test_ces_session_bootstrap.py  test_ces_session_capability.py  test_chat_auth.py  test_credit_card_mcp.py  test_credit_services.py  test_database_iam_auth.py  test_database_lifecycle_bootstrap.py  test_database_schema_contract.py  test_document_pipeline.py  test_encryption.py  test_extraction_models.py  test_fdx_open_banking.py  test_financial_journal.py  test_fraud_repository.py  test_fraud_scoring.py  test_fraud_triage_workflow.py  test_hitl_exception.py  test_idempotency_archival.py  test_integration_docai.py  test_internal_reset_access.py  test_key_rotation.py  test_knowledge_catalog.py  test_ledger_idempotency.py  test_locator.py  test_log_safety.py  test_main.py  (+19 more)
banking-service/utils/: audit.py  auth.py  auth_config.py  bq.py  database.py  encryption.py  env.py  gcp.py  gemini.py  idempotency.py  internal_auth.py  internal_execution.py  key_rotation.py  lazy_clients.py  log_safety.py  maintenance.py  pubsub.py  redis_client.py  version.py
data-generator/: Dockerfile  README.md  cloudbuild-publish-deploy.yaml  main.py  pyproject.toml  run.sh
data-generator/resources/: merchants.csv
data-generator/scenarios/: __init__.py  executor.py  planner.py  schemas.py  templates.py
data-generator/scheduler/: __init__.py  client.py  database.py  dispatcher.py  repository.py  schemas.py  service.py
data-generator/tests/: test_scenario_executor.py  test_scenario_planner.py  test_scheduler.py  test_simulation_client.py
data-generator/utils/: gcp.py  internal_auth.py  runtime.py
(+463 files in other folders)
