[project]
name = "data-generator"
version = "0.1.0"
description = "Synthetic Data Generator for Spanner"
requires-python = ">=3.13,<3.14"
dependencies = [
    "fastapi==0.136.0",
    "uvicorn==0.44.0",
    "google-cloud-spanner==3.68.0",
    "google-cloud-bigquery==3.41.0",
    "pydantic==2.10.6",
    "faker==33.3.0",
    "pyopenssl",
    "cachetools==7.0.6",
    "httpx==0.28.1",
]

[dependency-groups]
dev = [
    "pytest==9.0.3",
    "pytest-asyncio==1.3.0",
    "respx==0.22.0",
]

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"
default = true

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"
