[project]
name = "back-office-agent"
version = "0.1.0"
description = "Add your description here"
authors = [{ name = "Mark Servidio", email = "mservidio@google.com" }]
license = "Apache License 2.0"
readme = "README.md"
requires-python = ">=3.12,<3.14"

dependencies = [
    "google-adk[a2a]==1.33.0",
    "google-cloud-logging>=3.14.0,<4.0.0",
    "google-cloud-aiplatform[evaluation,agent-engines]>=1.143.0,<2.0.0",
    "protobuf>=6.33.6,<7.0.0",
    "beautifulsoup4>=4.14.3",
    "lxml>=6.0.2",
]

[tool.poetry]
package-mode = false

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.poetry.group.dev.dependencies]
pytest = ">=9.0.2"
pytest-asyncio = ">=1.3.0"
google-adk = { version = ">=1.22.1", extras = ["eval"] }
