[project]
name = "credit-support-agent"
version = "0.1.0"
description = "Credit Card Support Voice Agent with LiveKit and Gemini Live"
authors = [{ name = "AI Developer", email = "developer@google.com" }]
license = { text = "Apache License 2.0" }
readme = "README.md"
requires-python = ">=3.12,<3.14"

dependencies = [
    "google-adk[a2a]==1.33.0",
    "google-cloud-logging>=3.14.0,<4.0.0",
    "protobuf>=6.33.6,<7.0.0",
    "livekit==0.19.1",
    "livekit-api==1.1.0",
    "silero-vad==6.2.1",
    "onnxruntime==1.26.0",
    "torch==2.12.0",
    "opencv-python-headless>=4.10.0",
    "google-cloud-speech>=2.30.0",
    "httpx>=0.28.0",
    "mcp",
]

[tool.poetry]
package-mode = false

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.poetry.group.dev.dependencies]
pytest = ">=9.0.2"
pytest-asyncio = ">=1.3.0"

[tool.setuptools.packages.find]
include = ["agent*"]
